--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 </div>
                 <hr>
                 <div class="imgs">
-                    <img id="new_game" src="./images/new_game.JPG" alt="#newGame">
-                    <img src="./images/quit.JPG" alt="#quit">
+                    <img id="new_game" src="new_game.JPG" alt="#newGame">
+                    <img src="quit.JPG" alt="#quit">
                 </div>
             </div>
             <hr>
