--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <hr>
             <div class="game">
                 <div class="play">
-                    <input type="number" id="gussed_number" placeholder="Guess 4 digits number">
+                    <input type="number" id="gussed_number" placeholder="Guess 4 digits number"  min="1000" max="9999">
                     <button type="submit" id="guess_number">GO</button>
                 </div>
                 <div class="results">
