--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
                 </div>
                 <hr>
                 <div class="imgs">
-                    <img id="new_game" src="new_game.JPG" alt="#newGame">
-                    <img src="quit.JPG" alt="#quit">
+                    <img id="new_game" src="./images/new_game.JPG" alt="#newGame">
+                    <img src="./images/quit.JPG" alt="#quit">
                 </div>
             </div>
             <hr>
             <div class="game">
+                
                 <div class="play">
-                    <input type="number" id="gussed_number" placeholder="Guess 4 digits number"  min="1000" max="9999">
-                    <button type="submit" id="guess_number">GO</button>
+                    <input type="number" onfocusout="showValue(this)" onmouseout="showValue(this)"  id="gussed_number" placeholder="Guess 4 digits number" >
+                    <button type="submit" disabled="disabled"  id="guess_number">GO</button>
                 </div>
+            
                 <div class="results">
                     <table id="table">
                         <tr>
