--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="game">
                 
                 <div class="play">
-                    <input type="number" onfocusout="showValue(this)" onmouseout="showValue(this)"  id="gussed_number" placeholder="Guess 4 digits number" >
+                    <input type="number" onchange="showValue(this)" onmouseout="showValue(this)"  id="gussed_number" placeholder="Guess 4 digits number" >
                     <button type="submit" disabled="disabled"  id="guess_number">GO</button>
                 </div>
             
